rbx_dom_weak/src/snapshots/rbx_dom_weak__viewer__test__abbreviate_shared_string.snap
---
source: rbx_dom_weak/src/viewer.rs
expression: "DomViewer::new().view(&dom)"
---
referent: referent-0
name:
  Utf8:
    - Root
class: UnionOperation
properties:
  PhysicalConfigData:
    len: 3
    hash: 04e0bb39f30b1a3feb89f536c93be15055482df748674b00d26e5a75777702e9
children: []
