rbx_dom_weak/src/snapshots/rbx_dom_weak__viewer__test__redact_values.snap
---
source: rbx_dom_weak/src/viewer.rs
expression: "DomViewer::new().view(&dom)"
---
referent: referent-0
name:
  Utf8:
    - Root
class: ObjectValue
properties:
  Value: referent-0
children: []
